<resources>
    <string name="app_name">Skill Simulator</string>
    <string name="game_name_1">Game Name 1</string>
    <string name="options">OPTIONS</string>
    <string name="job_class_name_1">Job Class Name 1</string>
    <string name="build_name_1">Build Name 1</string>
    <string name="custom_game_1">Custom Game 1</string>
    <string name="add_game">Add Game</string>
    <string name="game_name">Game Name</string>
    <string name="build_name">Build Name</string>
    <string name="description">Description</string>
    <string name="custom_build">custom build</string>
    <string name="class_name">Class Name</string>
    <string name="class_name_1">Class Name 1</string>
    <string name="class_type">Class Type</string>
    <string name="ex_melee_ranged_etc">Ex. Melee, Ranged, etc.</string>
    <string name="class_description">Class Description</string>
    <string name="custom_class">custom class</string>
    <string name="custom_game">custom game</string>
    <string name="game_description">Game Description</string>
    <string name="game_info">Game Info</string>
    <string name="x">X</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="custom_class_1">Custom Class 1</string>
    <string name="class_info">Class Info</string>
    <string name="skill_info">Skill Info</string>
    <string name="skill_name">Skill Name</string>
    <string name="skill_name_1">Skill Name 1</string>
    <string name="skill_description">Skill Description</string>
    <string name="custom_skill">custom skill</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="no_record_found">No record found.</string>
    <string name="skill_simulator">Skill Simulator</string>
    <string name="saved_builds">Saved Builds</string>
    <string name="_10">10</string>
    <string name="splash_logo">SPLASH LOGO</string>
    <string name="skill_details">Skill Details</string>
    <string name="skill_logo">SKILL LOGO</string>
    <string name="skill_name_label1">Skill Name:</string>
    <string name="description_label1">Description:</string>
    <string name="level_label1">Level:</string>
    <string name="lorem_ipsum">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</string>
    <string name="add_skill">Add Skill</string>
    <string name="save_this_build">Save this build</string>
    <string name="add_build">Add Build</string>
    <string name="add_class">Add Class</string>
    <string name="skill_type">Skill Type</string>
    <string name="active">Active</string>
    <string name="max_level">Max Level</string>
    <string name="min_level">Min Level</string>
    <string name="_1">1</string>
    <string name="type">Type</string>
    <string name="not_set">Not Set</string>
    <string name="reset_all_skills">Reset All Skills</string>
    <string name="id_1">ID: 1</string>
    <string name="max_level_1_100">Max Level (1-100)</string>
    <string name="custom_game2">Custom Game</string>
    <string name="custom_class2">Custom Class</string>
    <string name="current_level">Current Level</string>
    <string name="skill_icon">SKILL ICON</string>
    <string name="level_10">Level: 10</string>
    <string name="type_active">Type: Active</string>
    <string name="custom_skill2">Custom Skill</string>
    <string name="max_skill_points">Max Skill Points</string>
    <string name="no_build_found_you_can_add_build_with_plus_sign">No build found. You can add build with plus sign.</string>
    <string name="upload_image">Upload Image</string>
</resources>