<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:padding="5sp"
        android:text="Add Class"
        android:textSize="20sp" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5sp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_build_name"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/build_name"
            android:text="@string/build_name_1"
            android:maxLines="1" />


    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5sp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_build_description"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/description"
            android:text="@string/custom_build"
            android:maxLines="1" />


    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5sp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_game_name"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/game_name"
            android:text="@string/custom_game_1"
            android:maxLines="1" />


    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5sp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_class_name"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/class_name"
            android:text="@string/class_name_1"
            android:maxLines="1" />


    </com.google.android.material.textfield.TextInputLayout>


</LinearLayout>