<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:padding="5sp"
        android:text="Add Class"
        android:textSize="20sp" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5sp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_class_name"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/class_name"
            android:text="@string/class_name_1"
            android:maxLines="1" />


    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5sp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_class_type"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/class_type"
            android:text="@string/ex_melee_ranged_etc"
            android:maxLines="1" />


    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5sp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_class_description"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/class_description"
            android:text="@string/custom_class"
            android:maxLines="1" />


    </com.google.android.material.textfield.TextInputLayout>


</LinearLayout>