<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/action_add_skill"
        android:icon="@drawable/baseline_add_24"
        android:title="@string/add_skill"
        app:showAsAction="always"
        tools:ignore="AlwaysShowAction">
    </item>

    <item
        android:id="@+id/action_reset_all_skills"
        android:icon="@drawable/baseline_refresh_24"
        android:title="@string/reset_all_skills"
        app:showAsAction="always">
    </item>

    <item
        android:id="@+id/action_save"
        android:icon="@drawable/baseline_save_24"
        android:title="@string/save_this_build"
        app:showAsAction="always">
    </item>
</menu>