<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="8dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_skill"
        android:textSize="20sp" />

    <com.google.android.material.divider.MaterialDivider
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"/>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_skill_name"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/skill_name"
            android:text=""
            android:inputType="text"
            android:maxLines="1"
            />


    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_skill_max_level"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/max_level_1_100"
            android:text=""
            android:inputType="number"
            android:maxLines="1" />


    </com.google.android.material.textfield.TextInputLayout>

</LinearLayout>