<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="160dp"
    android:layout_marginBottom="5dp"
    android:layout_marginTop="5dp"
    app:cardCornerRadius="16dp"
    app:cardElevation="4dp"
    app:cardUseCompatPadding="true"
    android:layout_margin="5dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:gravity="center_horizontal"
        android:padding="10dp">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/jobclass_picture"
            style="@style/RoundedImageViewStyle"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_alignParentTop="true"
            android:layout_centerInParent="true"
            android:src="@drawable/icon_default" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_options_row"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="-5dp"
            android:contentDescription="@string/options"
            android:background="@drawable/baseline_more_vert_24"
            android:text="@string/x"
            android:textAlignment="center" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/jobclass_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:text="@string/class_name_1"
            android:textSize="16sp"
            android:textStyle="bold"
            android:gravity="center"
            android:textAlignment="center"
            android:maxLines="2" />

    </RelativeLayout>

</androidx.cardview.widget.CardView>