<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="120dp"
    app:cardCornerRadius="16dp"
    app:cardElevation="4dp"
    app:cardUseCompatPadding="true">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:padding="8dp"
        android:weightSum="10">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/build_image"
            android:src="@drawable/skillsimulator_icon"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:layout_marginEnd="5dp"
            />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="4dp"
            android:layout_weight="7">

            <TextView
                android:id="@+id/build_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:textColor="@android:color/holo_blue_light"
                android:textStyle="bold"
                android:singleLine="true"
                android:ellipsize="marquee"
                android:scrollHorizontally="true"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:text="@string/build_name_1"
                />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/build_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/id_1"
                android:textSize="14sp"
                android:textStyle="bold"
                android:maxLines="1"
                android:ellipsize="marquee"
                />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/game_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/game_name_1"
                android:textSize="14sp"
                android:textStyle="bold"
                />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/jobclass_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/job_class_name_1"
                android:textSize="14sp"
                android:textStyle="bold"
                />

        </LinearLayout>


        <Button
            android:id="@+id/btn_options_row"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:background="@drawable/baseline_more_vert_24"
            android:layout_gravity="center_vertical|top"
            />


    </LinearLayout>



</androidx.cardview.widget.CardView>